added disclaimer and correct command

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </p>
 
       <h2>Command</h2>
-      <p>!game name of game</p>
+      <p>/game name of game</p>
 
       <h2>Response Links</h2>
       <ul>
@@ -82,6 +82,13 @@
         src="https://i.imgur.com/oLBLtPj.gif"
         alt="Khajiit Bot in action"
       />
+      <!-- disclaim that the command has changed to /game name of game instead of !game name of game-->
+      <p>
+        <em
+          >Note: The command has changed to /game name of game instead of !game
+          name of game</em
+        >
+      </p>
 
       <h2>Join our Discord Server</h2>
       <iframe
