--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
       .header {
         text-align: center;
         padding: 20px;
-        background-color: #7289da; /* discord purple */
       }
       .content {
-        margin: 20px auto;
+        margin: 0 auto;
         width: 80%;
+        max-width: 1200px; /* limit the width for large screens */
       }
       .bot-img {
         display: block;
         margin: 20px auto;
+        border-radius: 50%; /* make the logo round */
       }
       h1,
       h2 {
@@ -65,7 +66,7 @@
       </p>
 
       <h2>Command</h2>
-      <p>/game name of game</p>
+      <p>!game name of game</p>
 
       <h2>Response Links</h2>
       <ul>
