--- a/index.html
+++ b/index.html
@@ -15,44 +15,48 @@
       body {
         font-family: Arial, sans-serif;
         color: #fff;
-        background-color: #2c2f33; /* dark theme */
+        background-color: #2c2f33;
         margin: 0;
         padding: 0;
       }
-      .header {
+      header {
         text-align: center;
         padding: 20px;
+        background-color: #2c2f33;
       }
-      .content {
+      .logo {
+        border-radius: 50%;
+      }
+      .gif-demo {
+        border-radius: 10%;
+        max-width: 100%;
+        height: auto;
+      }
+      main {
         margin: 0 auto;
-        width: 80%;
-        max-width: 1200px; /* limit the width for large screens */
-      }
-      .bot-img {
-        display: block;
-        margin: 20px auto;
-        border-radius: 50%; /* make the logo round */
+        max-width: 960px;
+        padding: 20px;
       }
       h1,
       h2 {
-        color: #7289da; /* discord purple */
+        color: #7289da;
       }
       iframe {
         display: block;
-        margin: 20px auto;
+        margin: 0 auto;
       }
     </style>
   </head>
   <body>
-    <div class="header">
+    <header>
       <h1>Khajiit Bot</h1>
       <img
-        class="bot-img"
+        class="logo"
         src="https://i.imgur.com/ZJCKkPt.png"
         alt="Khajiit Bot Logo"
       />
-    </div>
-    <div class="content">
+    </header>
+    <main>
       <h2>About</h2>
       <p>Khajiit has wares, if you have coin...</p>
       <p>
@@ -79,10 +83,11 @@
 
       <h2>Bot in Action</h2>
       <img
-        class="bot-img"
+        class="gif-demo"
         src="https://i.imgur.com/oLBLtPj.gif"
         alt="Khajiit Bot in action"
       />
+
       <!-- disclaim that the command has changed to /game name of game instead of !game name of game-->
       <p>
         <em
@@ -100,6 +105,6 @@
         frameborder="0"
         sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
       ></iframe>
-    </div>
+    </main>
   </body>
 </html>
