--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Khajiit Bot - Discord Price Comparison Bot</title>
     <meta
@@ -15,31 +15,29 @@
       body {
         font-family: Arial, sans-serif;
         color: #fff;
-        background-color: #2c2f33;
+        background-color: #2c2f33; /* dark theme */
         margin: 0;
         padding: 0;
       }
-      header {
+      .header {
         text-align: center;
         padding: 20px;
-        background-color: #2c2f33;
+        background-color: #2c2f33; /* same as body background */
       }
       .logo {
-        border-radius: 50%;
+        border-radius: 50%; /* round the logo */
       }
       .gif-demo {
-        border-radius: 10%;
-        max-width: 100%;
-        height: auto;
+        border-radius: 10%; /* slightly round corners of the gif */
       }
-      main {
+      .content {
         margin: 0 auto;
-        max-width: 960px;
+        max-width: 960px; /* limit width for large screens */
         padding: 20px;
       }
       h1,
       h2 {
-        color: #7289da;
+        color: #7289da; /* discord purple */
       }
       iframe {
         display: block;
@@ -48,7 +46,7 @@
     </style>
   </head>
   <body>
-    <header>
+    <header class="header">
       <h1>Khajiit Bot</h1>
       <img
         class="logo"
@@ -56,55 +54,60 @@
         alt="Khajiit Bot Logo"
       />
     </header>
-    <main>
-      <h2>About</h2>
-      <p>Khajiit has wares, if you have coin...</p>
-      <p>
-        Khajiit searches G2A and Steam, then compares the prices and returns a
-        embedded message with links to both and a price comparison. Use "!game
-        name of game" to search.
-      </p>
-      <p>
-        Currently Khajiit only responds with Global & North American results in
-        USD $.
-      </p>
-
-      <h2>Command</h2>
-      <p>!game name of game</p>
-
-      <h2>Response Links</h2>
-      <ul>
-        <li>Main result.</li>
-        <li>Search results.</li>
-        <li>G2A purchase link & price</li>
-        <li>Steam purchase link & price (if available)</li>
-        <li>Discount % between the two</li>
-      </ul>
-
-      <h2>Bot in Action</h2>
-      <img
-        class="gif-demo"
-        src="https://i.imgur.com/oLBLtPj.gif"
-        alt="Khajiit Bot in action"
-      />
-
-      <!-- disclaim that the command has changed to /game name of game instead of !game name of game-->
-      <p>
-        <em
-          >Note: The command has changed to /game name of game instead of !game
-          name of game</em
-        >
-      </p>
-
-      <h2>Join our Discord Server</h2>
-      <iframe
-        src="https://discord.com/widget?id=709868384795361310&theme=dark"
-        width="350"
-        height="500"
-        allowtransparency="true"
-        frameborder="0"
-        sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
-      ></iframe>
+    <main class="content">
+      <section>
+        <h2>About</h2>
+        <p>Khajiit has wares, if you have coin...</p>
+        <p>
+          Khajiit searches G2A and Steam, then compares the prices and returns a
+          embedded message with links to both and a price comparison. Use "!game
+          name of game" to search.
+        </p>
+        <p>
+          Currently Khajiit only responds with Global & North American results
+          in USD $.
+        </p>
+      </section>
+      <section>
+        <h2>Command</h2>
+        <p>!game name of game</p>
+      </section>
+      <section>
+        <h2>Response Links</h2>
+        <ul>
+          <li>Main result.</li>
+          <li>Search results.</li>
+          <li>G2A purchase link & price</li>
+          <li>Steam purchase link & price (if available)</li>
+          <li>Discount % between the two</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Bot in Action</h2>
+        <img
+          class="gif-demo"
+          src="https://i.imgur.com/oLBLtPj.gif"
+          alt="Khajiit Bot in action"
+        />
+        <!-- disclaim that the command has changed to /game name of game instead of !game name of game-->
+        <p>
+          <em
+            >Note: The command has changed to /game name of game instead of
+            !game name of game</em
+          >
+        </p>
+      </section>
+      <section>
+        <h2>Join our Discord Server</h2>
+        <iframe
+          src="https://discord.com/widget?id=709868384795361310&theme=dark"
+          width="350"
+          height="500"
+          allowtransparency="true"
+          frameborder="0"
+          sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
+        ></iframe>
+      </section>
     </main>
   </body>
 </html>
