fixed commands syntax

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <p>Khajiit has wares, if you have coin...</p>
         <p>
           Khajiit searches G2A and Steam, then compares the prices and returns a
-          embedded message with links to both and a price comparison. Use "!game
+          embedded message with links to both and a price comparison. Use "/game
           name of game" to search.
         </p>
         <p>
@@ -69,7 +69,7 @@
       </section>
       <section>
         <h2>Command</h2>
-        <p>!game name of game</p>
+        <p>/game name of game</p>
       </section>
       <section>
         <h2>Response Links</h2>
