--- a/index.html
+++ b/index.html
@@ -15,19 +15,30 @@
     <meta name="author" content="Your Name" />
     <style>
       body {
-        font-family: Arial, sans-serif;
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
         color: #fff;
-        background-color: #2c2f33; /* dark theme */
         margin: 0;
         padding: 0;
         line-height: 1.5;
         position: relative; /* add this for positioning the floating button */
+        background: linear-gradient(
+          to bottom,
+          #2c2f33,
+          #3b3e42
+        ); /* gradient background */
+        cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="transform: rotate(250deg);"><text x="0" y="20" font-size="24">👉</text></svg>')
+            5 5,
+          auto;
       }
 
       .header {
         text-align: center;
         padding: 20px;
-        background-color: #2c2f33; /* same as body background */
+        background: linear-gradient(
+          to bottom,
+          rgba(114, 137, 218, 0.2) 0%,
+          rgba(95, 123, 199, 0) 100%
+        );
       }
 
       .header img {
@@ -43,7 +54,17 @@
 
       h1,
       h2 {
-        color: #7289da; /* discord purple */
+        font-family: "Whitney SSm A", "Whitney SSm B", sans-serif;
+        font-weight: 500;
+        color: #fff; /* white font color */
+      }
+
+      p,
+      a,
+      ul {
+        font-family: "Whitney SSm A", "Whitney SSm B", sans-serif;
+        font-size: 16px;
+        color: #fff; /* white font color */
       }
 
       iframe {
@@ -67,6 +88,9 @@
         padding: 10px 20px;
         border-radius: 5px;
         text-decoration: none;
+        cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 35 35"><text x="0" y="20" font-size="24">🙌</text></svg>')
+            5 5,
+          pointer;
       }
 
       .floating-button:hover {
@@ -80,16 +104,66 @@
         padding: 10px 20px;
         border-radius: 5px;
         line-height: 4;
-
         text-decoration: none;
       }
 
       .top-button:hover {
         background-color: #5468a7;
+        cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 35 35"><text x="0" y="20" font-size="24">🙌</text></svg>')
+            5 5,
+          pointer;
+      }
+
+      section {
+        padding: 20px;
+        margin-bottom: 20px;
+        border-radius: 10px;
+        background: linear-gradient(
+          to bottom,
+          rgba(114, 137, 218, 0.2),
+          rgba(95, 123, 199, 0.2)
+        ); /* gradient background for sections */
+      }
+
+      section:first-child {
+        background: rgba(114, 137, 218, 0.2);
+      }
+
+      /* Scrollbar Styles */
+      ::-webkit-scrollbar {
+        width: 10px;
+        height: 10px;
+      }
+
+      ::-webkit-scrollbar-track {
+        background: #2c2f33;
+      }
+
+      ::-webkit-scrollbar-thumb {
+        background: #7289da;
+        border-radius: 5px;
+      }
+
+      ::-webkit-scrollbar-thumb:hover {
+        background: #5468a7;
+      }
+
+      ::-webkit-scrollbar-thumb:active {
+        background: #3c4b89;
       }
     </style>
   </head>
   <body>
+    <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
+    <script>
+      kofiWidgetOverlay.draw("welovethis", {
+        type: "floating-chat",
+        "floating-chat.donateButton.text": "Buy me a kofi.",
+        "floating-chat.donateButton.background-color": "#794bc4",
+        "floating-chat.donateButton.text-color": "#fff",
+        //
+      });
+    </script>
     <header class="header">
       <h1>Khajiit Bot</h1>
       <img src="https://i.imgur.com/ZJCKkPt.png" alt="Khajiit Bot Logo" />
@@ -110,6 +184,10 @@
           src="https://i.imgur.com/oLBLtPj.gif"
           alt="Khajiit Bot in action"
         />
+        <p class="disclaimer">
+          Disclaimer: The command has recently changed to /game &lt;name of
+          game&gt; instead of !game shown.
+        </p>
       </section>
       <section>
         <h2>About</h2>
