changed add to invite

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <a
           href="https://discord.com/oauth2/authorize?client_id=696797425502781470&permissions=92224&scope=bot"
           class="top-button"
-          >Add Khajiit to your server!</a
+          >Invite Khajiit to your server!</a
         >
       </div>
     </header>
@@ -235,7 +235,7 @@
     <a
       href="https://discord.com/oauth2/authorize?client_id=696797425502781470&permissions=92224&scope=bot"
       class="floating-button"
-      >Add Bot</a
+      >Invite Khajiit</a
     >
   </body>
 </html>
