--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             5 5,
           pointer !important;
       }
-      html {
+      html,
+      div {
         cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="transform: rotate(250deg);"><text x="0" y="20" font-size="24">👉</text></svg>')
             5 5,
           pointer;
