--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
         padding: 10px 20px;
         border-radius: 5px;
         text-decoration: none;
+        cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 35 35"><text x="0" y="20" font-size="24">🙌</text></svg>')
+            5 5,
+          pointer !important;
       }
 
       .floating-button:hover {
@@ -157,6 +160,11 @@
         cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 35 35"><text x="0" y="20" font-size="24">🙌</text></svg>')
             5 5,
           pointer;
+      }
+      a {
+        cursor: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 35 35"><text x="0" y="20" font-size="24">🙌</text></svg>')
+            5 5,
+          pointer !important;
       }
     </style>
   </head>
